nginx-agent-docker/manifests/1.nginx-with-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-nim
  namespace: nim-test
  labels:
    app: nginx-nim
spec:
  selector:
    matchLabels:
      app: nginx-nim
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-nim
    spec:
      containers:
      - name: nginx-nim
        image: your.registry.tld/nginx-with-nim2-agent:tag
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nim
  namespace: nim-test
  labels:
    app: nginx-nim
spec:
  ports:
  - name: http
    port: 80
  - name: api
    port: 8080
  selector:
    app: nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-nim
  namespace: nim-test
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.com/health-checks: "true"
  labels:
    app: nginx-nim
spec:
  ingressClassName: nginx
  rules:
    - host: nim-test-nim.f5.ff.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
